Moved some building a bit to stop overlap. Made it so default page is last.

--- a/app/static/css/map.css
+++ b/app/static/css/map.css
@@ -152,12 +152,12 @@
 	left:125px;
 }
 .radiant.anc.top {
-	bottom:94px;
-	left:70px;
+	bottom: 97px;
+	left: 71px;
 }
 .radiant.anc.bot {
-	bottom:85px;
-	left:79px;
+	bottom: 86px;
+	left: 82px;
 }
 .radiant.barracks.top.melee {
 	bottom:131px;
